--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-preset-stage-2": "6.24.1",
     "babel-preset-stage-3": "6.24.1",
     "babel-register": "6.26.0",
+    "chai-as-promised": "^7.1.1",
     "dotenv": "6.2.0",
     "truffle": "^5.1.41",
     "truffle-flattener": "^1.4.4",
